Eliminated Num for Int + improved Scheme.eq[v,ual].
Later I will implement the full numeric tower.

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@ INCLUDES =
 OCAMLOPT = ocamlopt $(INCLUDES)
 OCAMLYACC = menhir
 OCAMLLEX = ocamllex
-LIBS = nums.cmxa
+LIBS = #nums.cmxa
 YFLAGS =
 
 simple:
